[gd_scene load_steps=10 format=3 uid="uid://bkqop5vtydbqm"]

[ext_resource type="Script" path="res://src/scripts/game-scripts/biom-scripts/hub-scripts/elborus-hub.gd" id="1_tbxwe"]
[ext_resource type="Texture2D" uid="uid://fwhgu1ducgwo" path="res://src/ui/backgrounds/hub-backgrounds/Гномы(Elborus).png" id="2_im651"]
[ext_resource type="VideoStream" path="res://src/ui/backgrounds/hub-backgrounds/Гномы(Elborus).ogv" id="3_efofp"]
[ext_resource type="Texture2D" uid="uid://cbs8xmap4tgjv" path="res://src/ui/buttons/support green.png" id="3_vdtpr"]
[ext_resource type="Texture2D" uid="uid://bjbfwcm8ld8l1" path="res://src/ui/backgrounds/battle_step.png" id="4_lxgvh"]
[ext_resource type="Texture2D" uid="uid://cxvwvuvbhim3y" path="res://src/ui/buttons/bottom.png" id="4_q0a5f"]
[ext_resource type="Texture2D" uid="uid://doq20ct6rvrxb" path="res://src/ui/buttons/back_button.png" id="4_vk4eo"]
[ext_resource type="Texture2D" uid="uid://cq4yc1cdcmtb5" path="res://src/ui/buttons/bottom off 3.png" id="5_fqh72"]
[ext_resource type="Texture2D" uid="uid://cq5lejgcnil4s" path="res://src/ui/elements/New item.png" id="7_fiogu"]

[node name="Elborus-Hub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tbxwe")
metadata/_edit_use_anchors_ = true

[node name="BackGround-Image" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("2_im651")
expand_mode = 1
stretch_mode = 6

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 0.6
stretch_mode = 3

[node name="BackGround-Video" type="VideoStreamPlayer" parent="AspectRatioContainer"]
layout_mode = 2
stream = ExtResource("3_efofp")
autoplay = true
expand = true
loop = true
metadata/_edit_use_anchors_ = true

[node name="Go-Battle-Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -269.0
offset_top = -766.0
offset_right = -269.0
offset_bottom = -766.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.06, 1.06)

[node name="Battle" type="MarginContainer" parent="Go-Battle-Buttons"]
layout_mode = 0
offset_left = 183.0
offset_top = 910.0
offset_right = 295.0
offset_bottom = 1020.0

[node name="Battle" type="TextureButton" parent="Go-Battle-Buttons/Battle"]
layout_mode = 2
texture_normal = ExtResource("4_q0a5f")
texture_pressed = ExtResource("4_q0a5f")
texture_hover = ExtResource("4_q0a5f")
texture_focused = ExtResource("4_q0a5f")
ignore_texture_size = true
stretch_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="Go-Battle-Buttons"]
layout_mode = 0
offset_left = 209.0
offset_top = 930.0
offset_right = 268.0
offset_bottom = 990.0

[node name="Battle1" type="TextureButton" parent="Go-Battle-Buttons/MarginContainer"]
layout_mode = 2
texture_normal = ExtResource("7_fiogu")
texture_pressed = ExtResource("7_fiogu")
texture_hover = ExtResource("7_fiogu")
texture_focused = ExtResource("7_fiogu")
ignore_texture_size = true
stretch_mode = 0

[node name="Battle2" type="MarginContainer" parent="Go-Battle-Buttons"]
layout_mode = 0
offset_left = 330.189
offset_top = 779.245
offset_right = 442.189
offset_bottom = 889.245

[node name="Battle2" type="TextureButton" parent="Go-Battle-Buttons/Battle2"]
layout_mode = 2
texture_normal = ExtResource("5_fqh72")
texture_pressed = ExtResource("5_fqh72")
texture_hover = ExtResource("5_fqh72")
texture_focused = ExtResource("5_fqh72")
ignore_texture_size = true
stretch_mode = 0

[node name="Battle3" type="MarginContainer" parent="Go-Battle-Buttons"]
layout_mode = 0
offset_left = 125.472
offset_top = 733.019
offset_right = 237.472
offset_bottom = 843.019

[node name="Battle3" type="TextureButton" parent="Go-Battle-Buttons/Battle3"]
layout_mode = 2
texture_normal = ExtResource("5_fqh72")
texture_pressed = ExtResource("5_fqh72")
texture_hover = ExtResource("5_fqh72")
texture_focused = ExtResource("5_fqh72")
ignore_texture_size = true
stretch_mode = 0

[node name="Battle5" type="MarginContainer" parent="Go-Battle-Buttons"]
layout_mode = 0
offset_left = 201.887
offset_top = 586.792
offset_right = 313.887
offset_bottom = 696.792

[node name="Battle5" type="TextureButton" parent="Go-Battle-Buttons/Battle5"]
layout_mode = 2
texture_normal = ExtResource("5_fqh72")
texture_pressed = ExtResource("5_fqh72")
texture_hover = ExtResource("5_fqh72")
texture_focused = ExtResource("5_fqh72")
ignore_texture_size = true
stretch_mode = 0

[node name="Battle6" type="MarginContainer" parent="Go-Battle-Buttons"]
layout_mode = 0
offset_left = 308.491
offset_top = 435.849
offset_right = 420.491
offset_bottom = 545.849

[node name="Battle6" type="TextureButton" parent="Go-Battle-Buttons/Battle6"]
layout_mode = 2
texture_normal = ExtResource("5_fqh72")
texture_pressed = ExtResource("5_fqh72")
texture_hover = ExtResource("5_fqh72")
texture_focused = ExtResource("5_fqh72")
ignore_texture_size = true
stretch_mode = 0

[node name="Battle7" type="MarginContainer" parent="Go-Battle-Buttons"]
layout_mode = 0
offset_left = 83.0189
offset_top = 528.302
offset_right = 195.019
offset_bottom = 638.302

[node name="Battle7" type="TextureButton" parent="Go-Battle-Buttons/Battle7"]
layout_mode = 2
texture_normal = ExtResource("5_fqh72")
texture_pressed = ExtResource("5_fqh72")
texture_hover = ExtResource("5_fqh72")
texture_focused = ExtResource("5_fqh72")
ignore_texture_size = true
stretch_mode = 0

[node name="Battle8" type="MarginContainer" parent="Go-Battle-Buttons"]
layout_mode = 0
offset_left = 209.434
offset_top = 350.943
offset_right = 321.434
offset_bottom = 460.943

[node name="Battle8" type="TextureButton" parent="Go-Battle-Buttons/Battle8"]
layout_mode = 2
texture_normal = ExtResource("5_fqh72")
texture_pressed = ExtResource("5_fqh72")
texture_hover = ExtResource("5_fqh72")
texture_focused = ExtResource("5_fqh72")
ignore_texture_size = true
stretch_mode = 0

[node name="UI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 2.0
offset_top = -5.0
offset_right = 2.0
offset_bottom = -788.0
grow_horizontal = 2
grow_vertical = 2

[node name="HelpContainer" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 439.0
offset_top = 11.0
offset_right = -11.0
offset_bottom = 61.0
grow_horizontal = 2

[node name="HelpButton" type="TextureButton" parent="UI/HelpContainer"]
layout_mode = 2
texture_normal = ExtResource("3_vdtpr")
texture_pressed = ExtResource("3_vdtpr")
texture_hover = ExtResource("3_vdtpr")
texture_focused = ExtResource("3_vdtpr")
ignore_texture_size = true
stretch_mode = 0

[node name="BackButtonContainer" type="MarginContainer" parent="UI"]
layout_mode = 1
offset_left = 12.0
offset_top = 8.0
offset_right = 92.0
offset_bottom = 69.0

[node name="BackButton" type="TextureButton" parent="UI/BackButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("4_vk4eo")
texture_pressed = ExtResource("4_vk4eo")
texture_hover = ExtResource("4_vk4eo")
texture_focused = ExtResource("4_vk4eo")
ignore_texture_size = true
stretch_mode = 0

[node name="Elborus" type="MarginContainer" parent="UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -101.0
offset_top = 16.0
offset_right = 102.0
offset_bottom = 62.0
grow_horizontal = 2

[node name="TextureRect" type="TextureRect" parent="UI/Elborus"]
layout_mode = 2
texture = ExtResource("4_lxgvh")

[node name="Elborus" type="Label" parent="UI/Elborus"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "1/10"
horizontal_alignment = 1

[connection signal="pressed" from="Go-Battle-Buttons/Battle/Battle" to="." method="_on_battle_pressed"]
[connection signal="pressed" from="Go-Battle-Buttons/MarginContainer/Battle1" to="." method="_on_battle_1_pressed"]
[connection signal="pressed" from="Go-Battle-Buttons/Battle2/Battle2" to="." method="_on_battle_2_pressed"]
[connection signal="pressed" from="Go-Battle-Buttons/Battle3/Battle3" to="." method="_on_battle_3_pressed"]
[connection signal="pressed" from="Go-Battle-Buttons/Battle5/Battle5" to="." method="_on_battle_5_pressed"]
[connection signal="pressed" from="Go-Battle-Buttons/Battle6/Battle6" to="." method="_on_battle_6_pressed"]
[connection signal="pressed" from="Go-Battle-Buttons/Battle7/Battle7" to="." method="_on_battle_7_pressed"]
[connection signal="pressed" from="Go-Battle-Buttons/Battle8/Battle8" to="." method="_on_battle_8_pressed"]
[connection signal="pressed" from="UI/BackButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
