extends Control






func _on_back_button_pressed():
	SceneChangeManager.go_to_scene("res://src/scenes/game-scenes/biom.tscn")


func _on_battle_pressed():
	SceneChangeManager.go_to_scene("res://src/scenes/battle-scenes/elborus-battle.tscn")


func _on_battle_1_pressed():
	SceneChangeManager.go_to_scene("res://src/scenes/battle-scenes/elborus-battle.tscn")


func _on_battle_2_pressed():
	SceneChangeManager.go_to_scene("res://src/scenes/battle-scenes/elborus-battle.tscn")


func _on_battle_3_pressed():
	SceneChangeManager.go_to_scene("res://src/scenes/battle-scenes/elborus-battle.tscn")


func _on_battle_5_pressed():
	SceneChangeManager.go_to_scene("res://src/scenes/battle-scenes/elborus-battle.tscn")


func _on_battle_6_pressed():
	SceneChangeManager.go_to_scene("res://src/scenes/battle-scenes/elborus-battle.tscn")


func _on_battle_7_pressed():
	SceneChangeManager.go_to_scene("res://src/scenes/battle-scenes/elborus-battle.tscn")


func _on_battle_8_pressed():
	SceneChangeManager.go_to_scene("res://src/scenes/battle-scenes/elborus-battle.tscn")




